refactor: separated the file hom.html into several files

--- a/app_home/templates/app_home/pages/home.html
+++ b/app_home/templates/app_home/pages/home.html
@@ -1,181 +1,5 @@
-{% load static %}
-{% load i18n %}
+{% extends 'global/pages/base.html' %}
 
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'global/images/partial-logo.png' %}" type="image/x-icon">
-    <title>Home | </title>
-</head>
-<body class="C-body">
-    <!-- header -->
-    <header class="C-header">
-        <!-- contact -->
-        <section class="C-header_contact center_flex_row">
-            <a target="_blank" href="{{ home_content.social_network.instagram_link }}"><img src="{% static 'global/images/icons/instagram_p.png' %}" alt="logo instagram" class="center_flex_row"></a>
-            <a target="_blank" href="{{ home_content.social_network.facebook_link }}"><img src="{% static 'global/images/icons/facebook_p.png' %}" alt="logo facebook" class="center_flex_row"></a>
-            <a target="_blank" href="{{ home_content.social_network.whatsapp_link }}"><img src="{% static 'global/images/icons/whatsapp_p.png' %}" alt="logo whatsapp"class="center_flex_row"></a>
-        </section>
-
-        <!-- logo and menu -->
-        <section class="C-menu center_flex_row">
-            <!-- logo -->
-            <div class="C-logo center_flex_row">
-                <img src="{% static 'global/images/partial-logo.png' %}" alt="">
-            </div>
-            <!-- menu -->
-            <div class="C-menu__menu">
-                <button class="C-menu__button center_flex_row">
-                    <span class="material-symbols-outlined C-menu__span">menu</span>
-                </button>
-                <nav class="C-menu__nav is_hidden">
-                    <ul class="C-menu__ul center_flex_column">
-                        <li class="C-menu__li"><a href="/" class="C-menu__link standard_transition">{% translate 'home' %}</a></li>
-                        <li class="C-menu__li"><a href="#profile" class="C-menu__link standard_transition">{% translate 'about' %}</a></li>
-                        <li class="C-menu__li"><a href="#services" class="C-menu__link standard_transition">{% translate 'services' %}</a></li>
-                        <li class="C-menu__li"><a href="" class="C-menu__link standard_transition">{% translate 'gallery' %}</a></li>
-                        <li class="C-menu__li"><a href="#contact" class="C-menu__link standard_transition">{% translate 'contact' %}</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </section>
-
-        <!-- title -->
-        <section class="C-title center_flex_column">
-            <p class="C-title__text is_animated">
-                treine com o personal <span class="C-title__span">maicon</span>
-            </p>
-            <a href="" class="C-title__link is_animated">agende sua avaliação</a>
-        </section>
-    </header>
-
-    <!-- main -->
-    <main class="C-main">
-        <!-- section intro -->
-        <section data-anime="left" id="profile" class="C-intro center_flex_column center_margin">
-            <h1 class="C-intro__title">{{ home_content.section_intro.title }}</h1>
-            <p class="C-intro__description">{{ home_content.section_intro.description }}</p>
-            <div class="C-intro__card">
-                <h2 class="C-intro__card_title">
-                    {{ home_content.section_intro.subtitle_one }}
-                </h2>
-                <p class="C-intro__card_description">
-                    {{ home_content.section_intro.sub_description_one }}
-                </p>
-            </div>
-            <div class="C-intro__card">
-                <h2 class="C-intro__card_title">
-                    {{ home_content.section_intro.subtitle_two }}
-                </h2>
-                <p class="C-intro__card_description">
-                    {{ home_content.section_intro.sub_description_two }}
-                </p>
-            </div>
-            <div class="C-intro__card">
-                <h2 class="C-intro__card_title">
-                    {{ home_content.section_intro.subtitle_three }}
-                </h2>
-                <p class="C-intro__card_description">
-                    {{ home_content.section_intro.sub_description_three }}
-                </p>
-            </div>
-        </section>
-
-        <!-- personal profile -->
-        <section class="C-profile center_flex_column">
-            <div data-anime="left" class="C-profile_description">
-                <h2>{{ home_content.profile.title }}</h2>
-                <p>{{ home_content.profile.description }}</p>
-            </div>
-            <div data-anime="down" class="C-profile_image center_flex_row">
-                <img src="{{ home_content.profile.image.url }}" alt="profile image">
-                <span class="C-profile_span"></span>
-            </div>
-        </section>
-
-        <!-- pre gallery -->
-        <section class="C-pre_gallery center_flex_column">
-            <div class="C-pre_gallery_box center_flex_row">
-                <div data-anime="left" class="C-pre_gallery_images">
-                    <ul class="C-pre_gallery_ul">
-                        <li class="C-pre_gallery_li">
-                            <input type="radio" name="pre_gallery_img" id="img1" checked>
-                            <label for="img1"></label>
-                            <img src="{{ home_content.pre_gallery.image_one.url }}" alt="">
-                        </li>
-                        <li class="C-pre_gallery_li">
-                            <input type="radio" name="pre_gallery_img" id="img2">
-                            <label for="img2"></label>
-                            <img src="{{ home_content.pre_gallery.image_two.url }}" alt="">
-                        </li>
-                        <li class="C-pre_gallery_li">
-                            <input type="radio" name="pre_gallery_img" id="img3">
-                            <label for="img3"></label>
-                            <img src="{{ home_content.pre_gallery.image_three.url }}" alt="">
-                        </li>
-                    </ul>
-                </div>
-                <div data-anime="right" class="C-pre_gallery_description">
-                    <h2>{{ home_content.pre_gallery.title }}</h2>
-                    <p>{{ home_content.pre_gallery.description }}</p>
-                </div>
-            </div>
-            <!-- services -->
-            <section data-anime="down" id="services" class="C-services center_flex_column">
-                <h2>Atendimento exclusivo e personalizado</h2>
-                <div class="C-services__flex center_flex_row">
-                    {% for service in home_content.services.all %}
-                        <div class="C-services__service">
-                            <h2>{{ service.title }}</h2>
-                            <p>{{ service.description }}</p>
-                        </div>
-                    {% empty %}
-                        <h2>services not found</h2>
-                    {% endfor %}
-                </div>
-            </section>
-        </section>
-
-        <!-- contact and localization -->
-        <section id="contact" class="C-contact center_flex_row">
-            <div class="C-contact__contact center_flex_column" data-anime="left">
-                <h2>entre em contato</h2>
-                <a target="_blank" href="{{ home_content.social_network.facebook_link }}" class="C-contact__link center_flex_row"><img src="{% static 'global/images/facebook.png' %}" alt="logo facebook"><p>{{ home_content.social_network.facebook_text }}</p></a>
-                <a target="_blank" href="{{ home_content.social_network.instagram_link }}" class="C-contact__link center_flex_row"><img src="{% static 'global/images/instagram.png' %}" alt="logo instagram"><p>{{ home_content.social_network.instagram_text }}</p></a>
-                <a target="_blank" href="{{ home_content.social_network.whatsapp_link }}" class="C-contact__link center_flex_row"><img src="{% static 'global/images/whatsapp.png' %}" alt="logo whatsapp"><p>{{ home_content.social_network.whatsapp_phone }}</p></a>
-                <p>Fone: {{ home_content.social_network.whatsapp_phone }}</p>
-            </div>
-            <div class="C-contact__localization" data-anime="right">
-                <iframe data-anime="right" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3583.522754172879!2d-53.05904328504772!3d-26.081849083492397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f072d9fc39f61b%3A0x8fec623d0f0908ca!2sR.%20Rio%20G.%20do%20Sul%2C%201086%20-%20Alvorada%2C%20Francisco%20Beltr%C3%A3o%20-%20PR%2C%2085601-050!5e0!3m2!1spt-BR!2sbr!4v1677199562174!5m2!1spt-BR!2sbr" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </section>
-    </main>
-
-    <!-- footer -->
-    <footer class="C-footer center_flex_column">
-        <div class="C-footer__details">
-            <p class="C-footer__title">{{ home_content.adress.name }}</p>
-            <p class="C-footer__adress">{{ home_content.adress.adress }}</p>
-            <p class="C-footer__adress">{{ home_content.adress.city }}</p>
-            <p class="C-footer__adress">{{ home_content.adress.postal }}</p>
-            <p class="C-footer__copy"> &copy; 2023 - Todos os direitos reservados</p>
-        </div>
-        <div class="C-footer__logo">
-            <img src="{% static 'global/images/logo.png' %}" alt="">
-        </div>
-    </footer>
-</body>
-<script src="{% static 'global/js/script.js' %}"></script>
-</html>
+{% block content %}
+    {% include 'app_home/partials/_home.html' %}
+{% endblock %}
