--- a/app_home/templates/app_home/pages/home.html
+++ b/app_home/templates/app_home/pages/home.html
@@ -1,5 +1,11 @@
 {% extends 'global/pages/base.html' %}
 
+{% block head_title %} Home | {% endblock %}
+
+{% block title %}
+    {% include 'app_home/partials/_title.html' %}
+{% endblock %}
+
 {% block content %}
     {% include 'app_home/partials/_home.html' %}
 {% endblock %}
