--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -97,6 +97,23 @@ body::-webkit-scrollbar-thumb {
 .is_hidden {
   display: none;
 }
+
+.is_back {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  background-color: var(--black-transparent-bg);
+  display: flex;
+  justify-content: center;
+  padding: 25px 5%;
+}
+
+.full_page {
+  width: 100% !important;
+  max-width: 800px;
+}
 /* ###### END GENERICS ######*/
 
 /* START BODY */
@@ -596,6 +613,67 @@ body::-webkit-scrollbar-thumb {
   max-width: 100%;
   max-height: 378px;
 }
+
+.C-gallery {
+  width: 100%;
+  max-width: 2048px;
+  background: rgba(105, 102, 102, 0.295);
+  backdrop-filter: contrast(1) blur(25px);
+  padding: 10px;
+  border-radius: 10px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: stretch;
+  row-gap: 15px;
+  column-gap: 15px;
+}
+
+.C-gallery__c_image, .C-gallery__c_image_back {
+  width: 100%;
+  max-width: 320px;
+  transition: all 300ms ease;
+  flex-grow: 2;
+  flex-shrink: 2;
+  flex-basis: auto;
+}
+
+.C-gallery__c_image {
+  position: relative;
+}
+
+.C-gallery__c_image_back {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.C-gallery__c_image:hover {
+  transform: scale(1.02) translate(5px, -5px);
+}
+
+.C-gallery__image {
+  width: 100%;
+  cursor: pointer;
+}
+
+.C-gallery__c_image {
+  color: var(--standard-white);
+  text-align: center;
+}
+
+.C-gallery__c_image h2 {
+  font-size: 16px;
+  text-transform: capitalize;
+  letter-spacing: 1.8px;
+  line-height: 1.6;
+}
+
+.C-gallery__c_image p {
+  font-size: 14px;
+  line-height: 1.5;
+
+}
 /* END MAIN */
 
 /* START FOOTER */
@@ -722,7 +800,17 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
+@media screen and (min-width: 367px) {
+  .C-gallery__c_image {
+    flex-basis: 45%;
+  }
+}
+
 @media screen and (min-width: 600px) {
+  .C-gallery__c_image {
+    flex-basis: 30%;
+  }
+
   .C-footer {
     flex-direction: row;
     justify-content: space-between;
@@ -798,6 +886,10 @@ body::-webkit-scrollbar-thumb {
 
   .C-profile_image {
     top: -45px;
+  }
+
+  .C-gallery__c_image {
+    flex-basis: 23%;
   }
 
   .C-footer {
