feat: created the function for animate gallery

--- a/app_home/templates/app_home/partials/_title.html
+++ b/app_home/templates/app_home/partials/_title.html
@@ -5,5 +5,5 @@
     <p class="C-title__text is_animated">
         treine com o personal <span class="C-title__span">maicon</span>
     </p>
-    <a href="{{ home_content.social_network.whatsapp_link }}" class="C-title__link is_animated">agende sua avaliação</a>
+    <a href="{{ home_content.social_network.whatsapp_link }}" class="C-title__link is_animated" target="_blank">agende sua avaliação</a>
 </section>
