--- a/gallery/templates/pages/gallery.html
+++ b/gallery/templates/pages/gallery.html
@@ -1,17 +1,21 @@
 {% extends 'global/pages/base.html' %}
+{% load static %}
 
 {% block head_title %} Gallery | {% endblock %}
 
 {% block content %}
+    <div class="C-modal center_flex_row">
+        <div class="C-modal__c_image center_flex_row">
+            <img src="{% static "global/images/profile.jpeg" %}" alt="" class="C-modal__image">
+        </div>
+        <span class="material-symbols-outlined C-modal__button">close</span>
+    </div>
     <section class="C-gallery center_margin center_flex_row">
             {% for image in gallery %}
                 <div class="C-gallery__c_image">
                     <img class="C-gallery__image" src="{{ image.image.url }}" alt="">
                     <h2>{{ image.title }}</h2>
                     <p>{{ image.description }}</p>
-                    <div class="C-gallery__c_image_back">
-                        <img class="C-gallery__image glass_image" src="{{ image.image.url }}" alt="">
-                    </div>
                 </div>
             {% empty %}
                 <div class="C-gallery__c_image">
@@ -20,4 +24,3 @@
             {% endfor %}
     </section>
 {% endblock %}
-
